css: fix text-alignment rules.

--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ h1 {
   margin: auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   text-align: center;
 }
 
@@ -57,6 +56,7 @@ h1 {
 }
 
 section {
+  text-align: left;
   flex-shrink: 0;
   flex-grow: 1;
   flex-basis: auto;
